<resources>
    <string name="BannerG">ca-app-pub-9526889295508192/4686809722</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_search">Search</string>
    <string name="admob_app_id">ca-app-pub-9526889295508192~5588827858</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_inter_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">লিপিয়ন | Lipiyon</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_vector_path">M50 25,L80 50,M20 50,L80 50,M50 75,L80 50</string>
    <string name="banneerfb">717104763054806_717105099721439</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera">Camera</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_a_background">Choose a background</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="color">Color</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="define_roundedimageview" />
    <string name="directory">/.PhotoEditorTemp/</string>
    <string name="discard">Discard</string>
    <string name="discard_photo">Discard photo?</string>
    <string name="done">Done</string>
    <string name="double_tap">Double Tap to Change</string>
    <string name="email">mailto:jblabsforyou@gmail.com</string>
    <string name="email_feedback">Email feedback</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_banner_id">IMG_16_9_APP_INSTALL#1156954457977643_1159359654403790</string>
    <string name="facebook_banner_native">IMG_16_9_APP_INSTALL#1156954457977643_1159359654403790</string>
    <string name="facebook_inter_id">IMG_16_9_APP_INSTALL#1156954457977643_1159359511070471</string>
    <string name="facebook_native_id">IMG_16_9_APP_INSTALL#1156954457977643_1156959601310462</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fbinter">717104763054806_717105229721426</string>
    <string name="fbnative">717104763054806_717105426388073</string>
    <string name="feedback">Feed back</string>
    <string name="file_provider">com.jblabs.lipiyon.provider</string>
    <string name="flowers">Flowers</string>
    <string name="ginter">ca-app-pub-9526889295508192/8622749950</string>
    <string name="gnative">ca-app-pub-9526889295508192/6024506775</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="if_you_go_back_you_will_lose_your_photo">If you go back, you will lose your photo.</string>
    <string name="item_view_role_description">Tab</string>
    <string name="keep">Keep</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="loading">Loading...</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="max_item">Too much sticker</string>
    <string name="menu_vector_path">M20 30,L80 30,M20 50,L80 50,M20 70,L80 70</string>
    <string name="more_quotes">Caption</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="native_body">Body</string>
    <string name="native_headline">Headline</string>
    <string name="native_media_view">Media View</string>
    <string name="nature">Nature</string>
    <string name="night_sky">Night Sky</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="photos">Photos</string>
    <string name="policy_url">https://google.com</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="quotes1">মানুষের জীবনের বড়ো শত্রু হলো তার সংশয়, অবিশ্বাস এবং সন্দেহ। – সমরেশ বসু</string>
    <string name="quotes10">শিয়ালের মতো একশো বছর জীবন ধারণ করার চাইতে সিংহের মতো একদিন বাঁচাও ভালো। – টিপু সুলতান</string>
    <string name="quotes100">সাধারণ মানুষ যতক্ষণ ভালো লাগে ততক্ষণ কাজ করে। আর অসাধারণ মানুষেরা ভালো না লাগলেও যতক্ষণ না কাজ শেষ হয় ততক্ষণ কাজ বন্ধ করে না। – ব্রায়ান ট্রেসি</string>
    <string name="quotes101">নিজের প্রতি বিশ্বাস রাখো! নিজের যোগ্যতার ওপর ভরসা রাখো! নিজের শক্তির ওপর বিনয়ী কিন্তু যথেষ্ঠ আস্থা ছাড়া তুমি সফল বা সুখী হতে পারবে না। – নরম্যান ভিনসেন্ট পিল</string>
    <string name="quotes102">কোন কিছু যদি সত্যিই তোমার কাছে গুরুত্বপূর্ণ হয়, তাহলে কোন বাঁধাই তোমাকে থামাতে পারবে না। – এলন কস্তুরী</string>
    <string name="quotes103">সাফল্য তখনই আসে যখন একজন মানুষ তার নিজের ক্ষমতার পুরোটা কোনও কাজে বিলিয়ে দেয়। – জন উডেন</string>
    <string name="quotes104">কখনো অন্যের সঙ্গে নিজের তুলনা করবে না। যখনই আপনি তুলনা করবেন তখন আসলে আপনি নিজেই নিজেকে ছোট করবেন। – বিল গেটস</string>
    <string name="quotes105">আমরা শুধু সামনের দিকেই এগুতে পারি; আমরা নতুন দরজা খুলতে পারি, নতুন আবিষ্কার করতে পারি, কারণ আমরা কৌতুহলী। আর এই কৌতুহলই আমাদের সামনে এগিয়ে যাওয়ার সবচেয়ে বড়ো অনুপ্রেরণা। – ওয়াল্ট ডিজনি</string>
    <string name="quotes106">দুরত্ব জানে শুধু একদিন খুব বেশি নিকটে ছিলাম। – রুদ্র মুহাম্মদ শহীদুল্লাহ</string>
</resources>