<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SampleActivity"
        android:orientation="vertical">
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="56dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_sample"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginRight="16dp"
                    android:fontFamily="san_bold"
                    android:gravity="center"
                    android:text="@string/choose_a_background"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.Toolbar>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:layout_above="@+id/adView">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerSuggest" android:layout_width="match_parent" android:layout_height="60dp" android:nestedScrollingEnabled="false"/>
                    <TextView android:textSize="14sp" android:textColor="@color/white" android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="44dp" android:text="@string/color" android:fontFamily="san_regular"/>
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerColor" android:layout_width="match_parent" android:layout_height="100dp" android:nestedScrollingEnabled="false"/>
                    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="4dp">
                        <LinearLayout android:orientation="vertical" android:id="@+id/fb_native_container" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>
                    <TextView android:textSize="14sp" android:textColor="@color/white" android:gravity="center_vertical" android:paddingLeft="16dp" android:layout_width="match_parent" android:layout_height="44dp" android:text="@string/nature" android:fontFamily="san_regular"/>
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerNature" android:layout_width="match_parent" android:layout_height="150dp" android:nestedScrollingEnabled="false"/>
                    <TextView android:textSize="14sp" android:textColor="@color/white" android:gravity="center_vertical" android:paddingLeft="16dp" android:layout_width="match_parent" android:layout_height="44dp" android:text="@string/flowers" android:fontFamily="san_regular"/>
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerFlowers" android:layout_width="match_parent" android:layout_height="120dp" android:nestedScrollingEnabled="false"/>
                    <TextView android:textSize="14sp" android:textColor="@color/white" android:gravity="center_vertical" android:paddingLeft="16dp" android:layout_width="match_parent" android:layout_height="44dp" android:text="@string/night_sky" android:fontFamily="san_regular"/>
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerNight" android:layout_width="match_parent" android:layout_height="150dp" android:nestedScrollingEnabled="false"/>
                </LinearLayout>
            </ScrollView>
            <com.google.android.gms.ads.AdView android:id="@+id/adView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:adSize="SMART_BANNER" app:adUnitId="@string/BannerG"/>
        </RelativeLayout>
    </LinearLayout>